--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,3 +1,6 @@
+
+// .div_hover { background-color: #F6A7BD; }
+
 .container {
 	max-width: 1000px;
 	width: 100%;
@@ -5,6 +8,16 @@
 	position: relative;
 	padding: 50px 30px;
 	box-sizing: border-box;
+}
+
+.change_container_background {
+	max-width: 1000px;
+	width: 100%;
+	margin: 0 auto;
+	position: relative;
+	padding: 50px 30px;
+	box-sizing: border-box;
+	background: #F6A7BD;
 }
 
 header {
