Changed social media link/icon to instagram

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 			<div class="container">
 				<a href="{{ site.baseurl }}">{% include logo.html %}</a>
 			</div>
+
 		</nav>
 		<div class="content">
 			{{ content }}
@@ -61,8 +62,9 @@
 					<a class="twitter" href="https://twitter.com/{{ site.data.company.twitter }}">
 						{% include icons/social-media.html social_icon="twitter" %}
 					</a>
-					<a class="youtube" href="https://youtube.com/{{ site.data.company.youtube }}">
-						{% include icons/social-media.html social_icon="youtube" %}
+					<a class="instagram"
+					   href="https://www.instagram.com/brokenbrainsco/{{ site.data.company.instagram }}">
+						{% include icons/social-media.html social_icon="instagram" %}
 					</a>
 				</div>
 			</div>
