--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -81,7 +81,7 @@ nav .button {
 		box-sizing: border-box;
 		margin: 70px 0px;
 		width: 100%;
-		border: 1px solid #dfdfdf;
+		border: 3px solid #dfdfdf;
 		border-radius: 3px;
 		padding: 0 30px 25px 30px;
 		@media #{$desktop} {
@@ -111,80 +111,113 @@ nav .button {
 		}
 	}
 }
+// blockquote {
+// 	padding: 0;
+// 	margin: 120px 0 70px 0;
+// 	position: relative;
+//
+// 	.quote {
+// 		padding: 30px 50px;
+// 		max-width: 500px;
+// 		margin: 0 auto;
+// 		border-radius: 3px;
+// 		position: relative;
+// 		font-size: 1.3em;
+// 		text-align: center;
+// 		box-shadow: 0 20px 100px 0 rgba(0,0,0,0.1);
+// 		color: #000;
+// 		font-style: italic;
+//
+// 		&::before {
+// 			content: "\201C";
+// 			font-family: Georgia, serif;
+//
+// 			font-size: 90px;
+// 			font-weight: bold;
+// 			color: $brand-color;
+//
+// 			position: absolute;
+// 			left: 0;
+// 			top: -6px;
+// 			text-align: center;
+// 			width: 100%;
+// 		}
+//
+// 		&::after {
+// 			content: "";
+// 			position: absolute;
+// 			bottom: -30px;
+// 			left: 50%;
+// 			margin-left: -30px;
+// 			border-width: 30px 30px 0;
+// 			border-style: solid;
+// 			border-color: #ffffff transparent;
+// 			display: block;
+// 			width: 0;
+// 		}
+// 	}
+//
+// 	.meta {
+// 		text-align: center;
+// 		vertical-align: middle;
+// 		position: relative;
+// 		z-index: 999;
+// 		top: 35px;
+//
+// 		.author {
+// 			display: inline-block;
+// 			vertical-align: middle;
+// 			margin: 0 0 0 10px;
+// 		}
+// 	}
+//
+// 	.image {
+// 		display: inline-block;
+// 		width: 70px;
+// 		margin: 0 0 0 15px;
+// 		vertical-align: middle;
+// 		img {
+// 			max-width: 100%;
+// 			border-radius: 200px;
+// 		}
+// 	}
+// }
+//
+// .newsletter {
+// 	padding: 100px 0;
+// }
 blockquote {
-	padding: 0;
-	margin: 120px 0 70px 0;
-	position: relative;
-
-	.quote {
-		padding: 30px 50px;
-		max-width: 500px;
-		margin: 0 auto;
-		border-radius: 3px;
-		position: relative;
-		font-size: 1.3em;
-		text-align: center;
-		box-shadow: 0 20px 100px 0 rgba(0,0,0,0.1);
-		color: #000;
-		font-style: italic;
-
-		&::before {
-			content: "\201C";
-			font-family: Georgia, serif;
-
-			font-size: 90px;
-			font-weight: bold;
-			color: $brand-color;
-
-			position: absolute;
-			left: 0;
-			top: -6px;
-			text-align: center;
-			width: 100%;
-		}
-
-		&::after {
-			content: "";
-			position: absolute;
-			bottom: -30px;
-			left: 50%;
-			margin-left: -30px;
-			border-width: 30px 30px 0;
-			border-style: solid;
-			border-color: #ffffff transparent;
-			display: block;
-			width: 0;
-		}
-	}
-
-	.meta {
-		text-align: center;
-		vertical-align: middle;
-		position: relative;
-		z-index: 999;
-		top: 35px;
-
-		.author {
-			display: inline-block;
-			vertical-align: middle;
-			margin: 0 0 0 10px;
-		}
-	}
-
-	.image {
-		display: inline-block;
-		width: 70px;
-		margin: 0 0 0 15px;
-		vertical-align: middle;
-		img {
-			max-width: 100%;
-			border-radius: 200px;
-		}
-	}
+    font-family: Georgia, serif;
+    position: relative;
+    margin: 0.5em;
+    padding: 0.5em 2em 0.5em 3em;
 }
-
-.newsletter {
-	padding: 100px 0;
+blockquote:before {
+    font-family: Georgia, serif;
+    position: absolute;
+    font-size: 6em;
+    line-height: 1;
+    top: 0;
+    left: 0;
+    content: "\201C";
+}
+blockquote:after {
+    font-family: Georgia, serif;
+    position: absolute;
+   /* display: block; don't use this, it raised the quote too high from the bottom - defeated line-height? */
+    float:right;
+    font-size:6em;
+    line-height: 1;
+    right:0;
+    bottom:-0.5em;
+    content: "\201D";
+}
+blockquote footer {
+    padding: 0 2em 0 0;
+    text-align:right;
+}
+blockquote cite:before {
+    content: "\2013";
 }
 
 footer {
